project creation with api, routes

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8080   
-NEXT_PUBLIC_AUTH_SIGNUP=/auth/signup
-NEXT_PUBLIC_AUTH_SIGNIN=/auth/login
-NEXT_PUBLIC_AUTH_REFRESH=/auth/refresh
-NEXT_PUBLIC_NOTES_BASE=/notes                        
-NEXT_PUBLIC_CATEGORIES_BASE=/categories              
+NEXT_PUBLIC_API_BASE_URL=https://front-mission.bigs.or.kr
