--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
